<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/miHome"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home" />

    <item
        android:id="@+id/miFavourites"
        android:icon="@drawable/ic_action_favourite"
        android:title="@string/favourite" />

    <item
        android:id="@+id/miDarkMode"
        android:icon="@drawable/ic_action_dark_mode"
        android:title="@string/dark_mode" />

    <item
        android:id="@+id/miInfo"
        android:icon="@drawable/ic_action_info"
        android:title="@string/app_info" />

    <item
        android:id="@+id/miSignOut"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/sign_out" />


</menu>